--- a/css/board.css
+++ b/css/board.css
@@ -181,11 +181,13 @@ svg.arrow {
   background: #f2f5f8;
   width: 100%;
   height: 50%;
+  transition: height 0.2s linear;
 }
-evalbar .black {
+.evalbar .black {
   background: #0c0f14;
   width: 100%;
   height: 50%;
+  transition: height 0.2s linear;
 }
 
 /* Promotion */
