--- a/css/board.css
+++ b/css/board.css
@@ -30,7 +30,9 @@
   border-radius: 12px;
   overflow: hidden;
   touch-action: none;
+  -webkit-user-select: none;
   user-select: none;
+  -webkit-touch-callout: none;
   cursor: grab;
 }
 
@@ -48,6 +50,8 @@
     "DejaVu Sans", "Noto Sans Symbols2", "Segoe UI Symbol", "Symbola",
     "FreeSerif", serif;
   font-variant-emoji: text;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .sq {
